# Flashes

./: .gitignore  alembic.ini  pyproject.toml
app/: main.py
app/api/: main.py
app/api/routers/: item_touter.py  user_router.py
app/containers/core/: __init__.py
app/controllers/: base.py
app/core/: __init__.py  config.py  database.py  minio.py  settings.py
app/logging/: logger.py
app/models/api/: api_verify_class.py
app/models/dto/: bucket.py  users.py
app/models/tables/: __init__.py  base.py  bucket.py  card.py  user.py
app/repositories/: base.py  bucket.py  card.py
app/services/: base.py  jwt_token.py
app/services/api/: api_verify_class.py
migrations/: env.py
