[project]
name = "flashes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.123.5",
    "minio>=7.2.20",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
]
