[project]
name = "flashes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.123.5",
    "jose>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.44",
]
